--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./src/app.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon ./src/app.js",
+    "dev": "nodemon --exec sucrase-node ./src/app.js",
     "test": "cross-env NODE_ENV=test jest"
   },
   "dependencies": {
@@ -14,7 +14,9 @@
     "express": "^4.18.0",
     "jest": "^28.0.2",
     "nodemon": "^2.0.15",
+    "pg": "^8.7.3",
     "sucrase": "^3.21.0",
-    "supertest": "^6.2.3"
+    "supertest": "^6.2.3",
+    "uuid": "^8.3.2"
   }
 }
