--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-DB_USER=luizassano
+DB_USER=postgres
 DB_PASSWORD=1234
 DB_HOST=localhost
-DB=products_management
+DB=products_managements
 DB_PORT=5432
-PORT=3000
