--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon --exec sucrase-node ./src/app.js",
-    "test": "cross-env NODE_ENV=test jest"
+    "test": "cross-env NODE_ENV=test PORT=3001 jest"
   },
   "dependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.17.9",
